changed the portfolio folder

--- a/src/index.css
+++ b/src/index.css
@@ -232,11 +232,33 @@ textarea {
   text-align: center;
 }
 
-.img-thumbnail {
-  width: auto;
-  height: 300px;
-  margin-bottom: 50px;
-  cursor: pointer;
+.card-title {
+  font-size: 1.5rem;
+}
+
+.card-subtitle {
+  font-size: 1rem;
+}
+
+.card-text {
+  font-size: 0.75rem;
+  height: 8rem;
+}
+
+.card-techs {
+  font-size: 0.75rem;
+  height: 4rem;
+}
+
+.card-image {
+  max-width: 300px;
+  max-height: 150px;
+}
+
+.card-link {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 0.7rem;
 }
 
 .modalBackdrop {
