--- a/src/index.css
+++ b/src/index.css
@@ -89,11 +89,13 @@ a:hover {
 }
 
 header {
-  background: var(--dark);
+  background-image: url("../src/assets/cover/header.jpg");
+  text-align: center;
 }
 
-header a {
+header li {
   color: var(--light);
+  text-align: center;
 }
 
 button {
@@ -118,7 +120,8 @@ button[disabled] {
 }
 
 img {
-  max-width: 100%;
+  max-width: 50%;
+  margin-left: 25%;
 }
 
 span[role="img"] {
@@ -228,63 +231,58 @@ textarea {
 }
 
 .card {
-  width: 25%;
+  width: 70%;
   text-align: center;
 }
 
 .card-title {
   font-size: 1.5rem;
+  margin-left: 50%;
+  margin-right: -50%;
 }
 
 .card-subtitle {
   font-size: 1rem;
+  margin-left: 50%;
+  margin-right: -50%;
 }
 
 .card-text {
-  font-size: 0.75rem;
+  font-size: 1rem;
   height: 8rem;
+  margin-left: 50%;
+  margin-right: -50%;
 }
 
 .card-techs {
-  font-size: 0.75rem;
+  font-size: 1 rem;
   height: 4rem;
 }
 
 .card-image {
-  max-width: 300px;
-  max-height: 150px;
+  max-width: 1000px;
+  max-height: 250px;
 }
 
 .card-link {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-size: 0.7rem;
+  font-size: 1 rem;
+  margin-right: -90%;
 }
 
-.modalBackdrop {
-  background: rgba(0, 0, 0, 0.65);
-  bottom: 0;
-  left: 0;
-  overflow: auto;
-  position: fixed;
-  right: 0;
-  top: 0;
-  z-index: 1;
+.padding {
+  padding: 100px;
 }
 
-.modalContainer {
-  background: var(--darker);
-  border-radius: 5px;
-  max-width: 100%;
-  margin: 50px auto;
-  padding: 15px;
-  width: 960px;
-}
-
-.modalTitle {
-  font-size: 18px;
-  font-weight: 600;
-  margin-bottom: 25px;
+.page-header {
+  font-family: "Roboto", sans-serif;
+  font-size: 2.5em;
+  font-weight: 500;
+  margin: 5px 0;
+  line-height: 1.25;
+  padding-bottom: 2rem;
+  text-align: center;
 }
 
 button {
@@ -310,4 +308,17 @@ a {
 
 .navActive {
   color: var(--secondary);
+}
+
+.footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.icon {
+  width: 100px;
+  height: 50px;
+  margin-bottom: 50px;
+  cursor: pointer;
 }
