--- a/src/index.css
+++ b/src/index.css
@@ -322,3 +322,22 @@ a {
   margin-bottom: 50px;
   cursor: pointer;
 }
+
+.modalBackdrop {
+  width: 300%; /* Full width */
+  height: 300%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+}
+
+.modalContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.modalTitle {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 25px;
+}
